# math_parser_cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  entrypoint.sh
.github/workflows/: build-test.yml
src/: ASTBuilder.cpp  ASTBuilder.hpp  FunctionParser.cpp  FunctionParser.hpp  InvalidFormulaException.cpp  InvalidFormulaException.hpp  LexicalAnalyzer.cpp  LexicalAnalyzer.hpp  characterType.cpp  characterType.hpp  main.cpp
src/ast/: ASTBuilder.cpp  ASTBuilder.hpp  ASTNode.cpp  ASTNode.hpp  BinaryOperationExpression.cpp  BinaryOperationExpression.hpp  Constant.cpp  Constant.hpp  Expression.cpp  Expression.hpp  Number.cpp  Number.hpp  Operation.cpp  Operation.hpp  Parenthesis.cpp  Parenthesis.hpp  PostfixOperation.cpp  PostfixOperation.hpp  Variable.cpp  Variable.hpp
src/tokenize/: CharacterReadingState.cpp  CharacterReadingState.hpp  ConstantCompletedState.cpp  ConstantCompletedState.hpp  DigitCompleteState.cpp  DigitCompleteState.hpp  DigitOrCharacterReadingCompletedState.cpp  DigitOrCharacterReadingCompletedState.hpp  DigitReadingState.cpp  DigitReadingState.hpp  EmptyOperatorParenthesisOpenState.cpp  EmptyOperatorParenthesisOpenState.hpp  EmptyState.cpp  EmptyState.hpp  FSM.cpp  FSM.hpp  LexicalAnalyzer.cpp  LexicalAnalyzer.hpp  OperatorState.cpp  OperatorState.hpp  ParenthesisClosedState.cpp  ParenthesisClosedState.hpp  ParenthesisOpenState.cpp  ParenthesisOpenState.hpp  PostfixOperationState.cpp  PostfixOperationState.hpp  State.cpp  State.hpp  Token.cpp  Token.hpp  TokenType.hpp  Transition.cpp  Transition.hpp  VarCompletedState.cpp  VarCompletedState.hpp
test/: test-LexicalAnalyzer.hpp  test-constants.hpp  test-errors.hpp  test-functions.hpp  test-operators.hpp  test-parenthesis.hpp  test-postfixoperators.hpp  test-variables.hpp  test.cpp
